<resources>
    <string name="app_name">TestYS</string>
    <string name="btn_test1">TEST1</string>
    <string name="btn_test2">TEST2</string>
    <string name="btn_test3">TEST3</string>
    <string name="btn_test4">TEST4</string>
    <string name="btn_test5">TEST5</string>
    <string name="btn_test6">TEST6</string>
    <string name="btn_test7">TEST7</string>
    <string name="btn_test8">TEST8</string>
    <string name="btn_test9">TEST9</string>
    <string name="btn_test10">TEST10</string>
    <string name="btn_test11">TEST11</string>
    <string name="btn_test12">TEST12</string>
    <string name="btn_test13">TEST13</string>
    <string name="sample_activity1">Grid Layout Sample</string>
    <string name="sample_activity13">DataBindingSample</string>

    <string name="top_title">観光地一覧</string>
    <string name="spot_db_name">SPOT_DB_NAME</string>
    <string name="spot_db_table">SPOT_DB_TABLE</string>
    <string name="category_db_name">CATEGORY_DB_NAME</string>
    <string name="category_db_table">CATEGORY_DB_TABLE</string>

    <string name="SQL_CREATE_SPOT_TABLE_ENTRIES">CREATE TABLE SPOT_DB_TABLE(
        _id INTEGER PRIMARY KEY,
        spot_name TEXT,
        category_id INTEGER,
        address TEXT,
        postal_code TEXT,
        photo1 TEXT,
        tel TEXT,
        fax TEXT,
        comment	TEXT,
        opening_hours TEXT,
        closure TEXT,
        cost TEXT,
        characteristic TEXT,
        url TEXT
        )
    </string>
    <string name="SQL_DELETE_SPOT_TABLE_ENTRIES">
        DROP TABLE IF EXISTS SPOT_DB_TABLE
    </string>

    <string name="SQL_CREATE_CATEGORY_TABLE_ENTRIES">CREATE TABLE CATEGORY_DB_TABLE(
        _id INTEGER PRIMARY KEY,
        category_id INTEGER,
        category_name TEXT
        )
    </string>
    <string name="SQL_DELETE_CATEGORY_TABLE_ENTRIES">
        DROP TABLE IF EXISTS CATEGORY_DB_TABLE
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
