<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saito.testys.MainActivity">

    <Button
        android:id="@+id/button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test1" />

    <Button
        android:id="@+id/button02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test2"
     />

    <Button
        android:id="@+id/button03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test3" />

    <Button
        android:id="@+id/button04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test4" />

    <Button
        android:id="@+id/button05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test5" />

    <Button
        android:id="@+id/button06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test6" />

    <Button
        android:id="@+id/button07"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test7" />

    <Button
        android:id="@+id/button08"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test8" />

    <Button
        android:id="@+id/button09"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test9" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test10" />

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test11" />


</LinearLayout>
